fix the spacing on the eqnarray table

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -249,4 +249,15 @@
     cursor: text;
     font-family: @symbola;
   }
+
+  // eqnarray
+  table {
+    border-collapse: collapse;
+  }
+
+  td {
+    text-align: center;
+    &:first-child { text-align: right; }
+    &:last-child { text-align: left; }
+  }
 }
